# data-wings

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  cliff.toml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: ci.yml  release.yml
apps/web/: .dockerignore  Dockerfile  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
apps/web/public/: .gitkeep
doc/: index.md
doc/00_project/initiative_data-wings/: ADR-2026-02-11-architecture-council.md  ADR-2026-02-12-architecture-council-refresh.md  ADR-2026-02-12-multi-role-brainstorm.md  ARCHITECTURE_RISK_REGISTER.md  EXECUTION_ROADMAP.md  PDCA_EXECUTION_PLAN.md  PDCA_ITERATION_CHECKLIST.md  PLATFORM_OPTIMIZATION_PLAN.md  PRD.md  REAL_FLOW_TEST_EVIDENCE.md  (+12 more)
postmortem/: PM-2026-02-11-clickhouse-permanent-degraded.md  PM-2026-02-12-signup-cors-failed-to-fetch.md  PM-2026-02-12-web-healthcheck-ipv6-localhost.md  PM-2026-02-13-docker-web-public-not-found.md
scripts/: dev_all.sh  postmortem_scan.py  quickstart.sh  replay_real_api_fixture.py  requirements.txt  sandbox_task.sh  seed_data.py  start_ai_service.sh  supply_chain_gate.py  test_llm_api.py
security/: supply_chain_allowlist.json
services/ai/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/ai/src/: __init__.py  config.py  main.py  nl2sql.py  schema.py
services/ai/tests/: __init__.py  test_api.py  test_nl2sql.py  test_nl2sql_queries.py
services/api/: Dockerfile  go.mod  go.sum
spikes/nl2sql/: README.md  benchmark.md  nl2sql_engine.py  requirements.txt  schema.py  test_queries.py
(+67 files in other folders)
